--- a/Report/proj1_report.tex
+++ b/Report/proj1_report.tex
@@ -76,7 +76,7 @@ Kevin Huynh, 704-283-105}
         web server has the capability to handle concurrent connections. The
         server supports three different status codes: 200 OK, 400 Bad Request,
         404 Not Found, 408 Request Timeout. If the server does not receive data
-        from the client connection for one minute and the whole HTTP request
+        from the client connection for five seconds and the whole HTTP request
         has not been transmitted yet, then the server will time out and send a
         response with the 408 Request Timeout status. \\ \\
     \textbf{Parsing Request:}
@@ -128,8 +128,9 @@ Kevin Huynh, 704-283-105}
                         first iterator is set back to the beginning of the
                         buffer.
 
-                    \item If the ``recv" function call continuously returns 0,
-                        then the client will timeout.
+                    \item If the ``recv" function does not receive any information
+                        for more than 5 seconds, it times out and closes the
+                        socket.
                     
                     \item The client implements some logic so that if there are
                         two consecutive CRLF bytes, it knows that any more data
@@ -137,44 +138,31 @@ Kevin Huynh, 704-283-105}
                 \end{itemize}
             \end{itemize}
 
-            \item We extract the length of the payload from the ``content-
-                length" header of the response and we use that length to create
-                a buffer for the payload. The data that we use to fill the
-                payload buffer are the characters that come after two
-                consecutive CRLF characters, which are known from the step
-                prior. This data is extracted in the following method:
-            \begin{itemize}
-                \item We keep a count of how many bytes we need to read (the
-                    content-length) and how many we have read so far, dubbed
-                    ``bodybytes\_read."  We loop using ``recv" to read bytes
-                    into our payload buffer until ``bodybytes\_read" has
-                    reached the content length.
-                
-                \item If the ``recv" calls return 0 for a long enough period of
-                    time before the entire message has been received, the
-                    client will timeout.
-                
-                \item The entire message has not been received if either two
-                    consecutive `\textbackslash r\textbackslash n' bytes
-                    appears next to each other or bodybytes\_read is less than
-                    content- length.
-            \end{itemize}
+            \item After obtaining the entire HTTP Response header fields, the client
+                looks through the headers of the message:
+                \begin{itemize}
+                    \item If the status of the response is `404' or `400,' the client
+                        is informed of the error, nothing is downloaded, the socket is
+                        closed, and the program finishes.
+                    \item If the status is a success, the client will use the file name
+                        and create a file with that name using ofstream. A special case
+                        is implemented to change the file name of `/' into
+                        `index.html.'
+                \end{itemize}
+            \item We create a payload buffer of 256KB and read from the socket in 256KB
+                chunks and write to the file.
+                \begin{itemize}
+                    \item We loop using ``recv" to read 256KB at a time and write
+                        it to the file. If the ``recv" call returns 0, this means the
+                        socket has been closed and the whole file has been sent.
+                    
+                    \item If the ``recv" call does not receive any data for five seconds
+                        before the entire message has been received, the
+                        client will timeout and close the socket.
+                        
+                \end{itemize}
         \end{enumerate}
-    \textbf{Download File:} After obtaining the entire HTTP Response header
-        fields and the payload, the client looks through the headers of the
-        message:
-        \begin{itemize}
-            \item If the status of the response is `404' or `400,' the client
-                is informed of the error, nothing is downloaded, the socket is
-                closed, and the program finishes.
-            \item If the status is a success, the client will use the file name
-                and create a file with that name using ofstream. A special case
-                is implemented to change the file name of `/' into
-                `index.html.'
-        \end{itemize}
-        The downloading is then accomplished by copying the entirety of the
-        payload buffer into the new file. The socket is then closed and the
-        program finishes.
+        The socket is then closed and the program finishes.
 
 \section{Problems Encountered}
     For the web server, the biggest issue that we encountered was handling edge
@@ -188,22 +176,14 @@ Kevin Huynh, 704-283-105}
     ran into bugs when the slash was at the end of the string. We eventually
     implemented it iteratively with a for loop and some if statements.
 
-    Another problem we faced was how after finding the content length of the
-    payload, to check whether all of the payload has been read by recv and find
-    out which index to have recv read into the payload buffer. We solved this
-    by creating a counter that kept track of all of the bytes read into the
-    buffer. Depending on what recv returned for the number of bytes read,
-    bodybytes\_read would be appropriately modified so that a future recv
-    always copied into the right position in the payload buffer. This portion
-    of the code took a lot of work because any mistake in the counter would
-    cause the payload to become corrupted or incomplete. Another problem we
-    faced was integrating the server and client together and not knowing
-    whether bugs that occurred originated in the client or server source code.
-
-    Timeout on the server would work properly by setting the socket options.
-    However when applied to the client, we would not observe the same results.
-    Because of this we had to do a more primitive way of creating timeout by
-    comparing timestamps for a fixed number of seconds.
+    Another problem we faced was with handling large files. Originally we thought
+    that HTTP/1.0 required the Content-Length header, and we used that information
+    to create the size of our payload buffer. However, for large files (such as 100MB
+    or larger), this would create an enormous vector of chars. As a result, the
+    kernel would kill our client for using too much memory. To solve this issue,
+    we decided to read from the socket and write to the file in chunks of 256KB. We
+    determined that the file was finished sending then the recv call returned 0,
+    meaning that the socket was closed.
 
 \section{Testing}
     When we built our web server, we tested it with a web browser first. We
